--- a/raport_main.tex
+++ b/raport_main.tex
@@ -18,5 +18,6 @@ Application à la recherche par mots clés basée sur une DHT}}
 \tableofcontents
 
 \include{introduction}
+\include{filtredeBloom}
 
 \end{document}
