--- a/filtredeBloom.tex
+++ b/filtredeBloom.tex
@@ -38,6 +38,7 @@
 	\begin{table}[!h]
 		\centering		
 		\begin{tabular}{|l|*{14}{c|}r|}
+		\multicolumn{1}{c}{{\scriptsize 15}} &\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{{\scriptsize 0}}\\
 		\hline
 			1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\
 		\hline
@@ -71,7 +72,14 @@
 			\textbf{return} $m$\\
 	    	\end{tabbing}		
 	\end{framed}
-\end{flushleft}	
+\end{flushleft}
+
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width =12cm]{ismember.png}
+	\caption{isMember?}
+\end{figure}	
+
 	
 	
 	
