--- a/raport_main.tex
+++ b/raport_main.tex
@@ -10,6 +10,7 @@
 \usepackage{fancyhdr}
 \usepackage{amsmath}
 \usepackage{bbm}
+\usepackage{graphicx}
 
 
 %\usepackage{nopageno}
@@ -61,6 +62,7 @@
 \include{introduction}
 \include{projet}
 \include{filtredeBloom}
+\include{travail}
 \include{biblio}
 
 \end{document}
