--- a/raport_main.tex
+++ b/raport_main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{report}
+\documentclass[a4paper,11pt]{report}
 \usepackage[french]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -49,7 +49,7 @@
 		\vspace*{\stretch{2}}
 		\begin{center}
 			Réalisé par \textbf{NDOMBI TSHISUNGU} Christian \& \textbf{DOAN} Cao Sang \\
-			Encadre: M. \textbf{MAKPANGOU} Mesaac, Regal
+			Encadrant: M. \textbf{MAKPANGOU} Mesaac, Regal
 		\end{center}
 		\vspace*{\stretch{0.5}}
 		\begin{center}
