--- a/filtredeBloom.tex
+++ b/filtredeBloom.tex
@@ -18,9 +18,9 @@
 
 \begin{flushleft}
 	\begin{framed}
-		\textbf{Entrée:} $x$ objet à insérer dans le filtre de Bloom $B$\\
-		\textbf{Fonction:} $insert(x)$\\
-		\textbf{Retourne:} $\emptyset$
+		\textbf{IN:} \textit{x} objet à insérer dans le filtre de Bloom \textit{B}\\
+		\textbf{FUNCTION:} \textit{insert(x)}\\
+		\textbf{OUT:} $\emptyset$
 		\noindent\rule{\linewidth}{0.5pt}
 
 		\begin{tabbing}
@@ -53,9 +53,9 @@
 
 \begin{flushleft}
 	\begin{framed}
-		\textbf{Entrée:} $x$ objet à tester dans le filtre de Bloom $B$\\
-		\textbf{Fonction:} $ismember(x)$\\
-		\textbf{Retourne:} $bool$
+		\textbf{IN:} \emph{x} objet à tester dans le filtre de Bloom \textit{B}\\
+		\textbf{FUNCTION:} \textit{ismember(x)}\\
+		\textbf{OUT:} $bool$
 
 		\noindent\rule{\linewidth}{0.5pt}
 
